# python-colormath

./: .gitignore  .mypy.ini  .pylintrc  create_env.cmd  pyproject.toml
.github/workflows/: continuous-integration.yml
colormath/: __init__.py
