[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colormath"
authors = [
  { name="Gregory Taylor" },
]
dynamic = [
 "version",
]
description = "Color transformation tool."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]

dependencies = [
  'numpy',
  'networkx>=2.0',
]

[project.optional-dependencies]

dev = [
  'jedi',
  'mypy',
  'pylint',
  'flake8',
  'pytest',
  'build',
  'hatch',
  'black',
  'nose',
  'pre-commit',
  'sphinx',
]


[project.urls]
"Homepage" = "https://github.com/gtaylor/python-colormath"

[project.scripts]

[tool.hatch.version]
path = "colormath/__init__.py"
